Updated Parser code

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <None Update="resources\Input.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="resources\Output.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
